--- a/src/Makefile
+++ b/src/Makefile
@@ -1,12 +1,14 @@
 PPC_PREFIX	=	../objects/ppc
 I386_PREFIX	=	../objects/i386
+X86_64_PREFIX =	../objects/x86_64
 
 CC		=	gcc
 FLAGS		=	-W -Wall
 PPC		=	-arch ppc
 I386		=	-arch i386
+X86_64	=	-arch x86_64
 
-.PHONY:prefix-ppc, prefix-i386, clean
+.PHONY:prefix-ppc, prefix-i386, prefix-x86_64, clean
 
 #
 # ppc architecture
@@ -38,12 +40,30 @@ $(I386_PREFIX)/Player.o:Player.m Player.h constants.h
 $(I386_PREFIX)/Playlist.o:Playlist.m Playlist.h constants.h
 	$(CC) $(I386) $(FLAGS) -c $< -o $@
 
+#
+# x86_64 architecture
+#
+
+x86_64:prefix-x86_64 $(X86_64_PREFIX)/main.o $(X86_64_PREFIX)/Player.o $(X86_64_PREFIX)/Playlist.o
+
+$(X86_64_PREFIX)/main.o:main.m $(X86_64_PREFIX)/Player.o $(X86_64_PREFIX)/Playlist.o 
+	$(CC) $(X86_64) $(FLAGS) -c $< -o $@
+
+$(X86_64_PREFIX)/Player.o:Player.m Player.h constants.h
+	$(CC) $(X86_64) $(FLAGS) -c $< -o $@
+
+$(X86_64_PREFIX)/Playlist.o:Playlist.m Playlist.h constants.h
+	$(CC) $(X86_64) $(FLAGS) -c $< -o $@
+
 # Other targets
 
 prefix-ppc:
 	mkdir -p $(PPC_PREFIX)
 prefix-i386:
 	mkdir -p $(I386_PREFIX)
+prefix-x86_64:
+	mkdir -p $(X86_64_PREFIX)
 clean:
 	rm -f $(PPC_PREFIX)/*.o
 	rm -f $(I386_PREFIX)/*.o
+	rm -f $(X86_64_PREFIX)/*.o
