--- a/src/Makefile
+++ b/src/Makefile
@@ -1,41 +1,12 @@
-PPC_PREFIX	=	../objects/ppc
 I386_PREFIX	=	../objects/i386
 X86_64_PREFIX =	../objects/x86_64
 
 CC		=	gcc
 FLAGS		=	-W -Wall
-PPC		=	-arch ppc
 I386		=	-arch i386
 X86_64	=	-arch x86_64
 
-.PHONY:prefix-ppc, prefix-i386, prefix-x86_64, clean
-
-#
-# ppc architecture
-#
-
-ppc:prefix-ppc\
-	$(PPC_PREFIX)/main.o\
-	$(PPC_PREFIX)/Player.o\
-	$(PPC_PREFIX)/Playlist.o\
-	$(PPC_PREFIX)/AudioQueueUtils.o\
-	$(PPC_PREFIX)/PlaybackManager.o
-
-
-$(PPC_PREFIX)/main.o:main.m $(PPC_PREFIX)/Player.o $(PPC_PREFIX)/Playlist.o
-	$(CC) $(PPC) $(FLAGS) -c $< -o $@
-
-$(PPC_PREFIX)/Player.o:Player.m Player.h constants.h
-	$(CC) $(PPC) $(FLAGS) -c $< -o $@
-
-$(PPC_PREFIX)/Playlist.o:Playlist.m Playlist.h constants.h
-	$(CC) $(PPC) $(FLAGS) -c $< -o $@
-
-$(PPC_PREFIX)/AudioQueueUtils.o:AudioQueueUtils.m AudioQueueUtils.h constants.h
-	$(CC) $(PPC) $(FLAGS) -c $< -o $@
-
-$(PPC_PREFIX)/PlaybackManager.o:PlaybackManager.m PlaybackManager.h constants.h
-	$(CC) $(PPC) $(FLAGS) -c $< -o $@
+.PHONY:prefix-i386, prefix-x86_64, clean
 
 #
 # i386 architecture
@@ -91,13 +62,10 @@ $(X86_64_PREFIX)/PlaybackManager.o:PlaybackManager.m PlaybackManager.h constants
 
 # Other targets
 
-prefix-ppc:
-	mkdir -p $(PPC_PREFIX)
 prefix-i386:
 	mkdir -p $(I386_PREFIX)
 prefix-x86_64:
 	mkdir -p $(X86_64_PREFIX)
 clean:
-	rm -f $(PPC_PREFIX)/*.o
 	rm -f $(I386_PREFIX)/*.o
 	rm -f $(X86_64_PREFIX)/*.o
